force-app/main/default/objects/Remainder_Person__c/Remainder_Person__c.object-meta.xml
<CustomObject>
    <label>Remainder Person</label>
    <nameField>
        <label>Remainder Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remainder Persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>