force-app/main/default/objects/Remainder_Person__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(!ISBLANK(Remainder_Person_Contact__r.MailingStreet),Remainder_Person_Contact__r.MailingStreet &amp; BR(),NULL)&amp;
IF(!ISBLANK(Remainder_Person_Contact__r.MailingCity),Remainder_Person_Contact__r.MailingCity, NULL)&amp;&quot;, &quot;&amp;
IF(!ISBLANK(Remainder_Person_Contact__r.MailingState),Remainder_Person_Contact__r.MailingState,NULL)&amp;&quot;  &quot;&amp;
IF(!ISBLANK(Remainder_Person_Contact__r.MailingPostalCode), Remainder_Person_Contact__r.MailingPostalCode, NULL)&amp; 
IF(!ISBLANK(Remainder_Person_Contact__r.MailingCountry),BR()&amp;Remainder_Person_Contact__r.MailingCountry,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>