force-app/main/default/objects/Remainder_Person__c/fields/Beneficiary_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_First_Name__c</fullName>
    <formula>Closing__r.Beneficiary__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary First Name</label>
    <type>Text</type>
</CustomField>