force-app/main/default/objects/Remainder_Person__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>Remainder_Person_Contact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>