force-app/main/default/objects/Remainder_Person__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <label>Closing</label>
    <referenceTo>Closing__c</referenceTo>
    <relationshipName>Remainderpersons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>