force-app/main/default/objects/Remainder_Person__c/fields/Death_Certificate_Received__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Death Certificate Received</label>
    <type>Checkbox</type>
</CustomField>