force-app/main/default/objects/Remainder_Person__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipName>Remainderpersons</relationshipName>
    <type>Lookup</type>
</CustomField>