force-app/main/default/objects/Remainder_Person__c/fields/Last_4_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_4_SSN__c</fullName>
    <formula>Remainder_Person_Contact__r.Last_4_SS_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 4 SSN</label>
    <type>Text</type>
</CustomField>