force-app/main/default/objects/Remainder_Person__c/fields/Percent_of_Remaining_Funds__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Remaining_Funds__c</fullName>
    <label>% of Remaining Funds</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>