force-app/main/default/objects/Remainder_Person__c/fields/Relationship_to_Grantor__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Grantor__c</fullName>
    <label>Relationship to Grantor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>