force-app/main/default/objects/Remainder_Person__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Conservator</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>Other Representative</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Rep Payee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>