force-app/main/default/objects/Remainder_Person__c/fields/Release_Received__c.field-meta.xml
<CustomField>
    <fullName>Release_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release Received</label>
    <type>Checkbox</type>
</CustomField>