force-app/main/default/objects/Remainder_Person__c/fields/Remainder_Check_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Check_Amount__c</fullName>
    <label>Remainder Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>