force-app/main/default/objects/Remainder_Person__c/fields/Remainder_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remainder Letter Sent</label>
    <type>Checkbox</type>
</CustomField>