force-app/main/default/objects/Remainder_Person__c/fields/Remainder_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Letter_Sent_Date__c</fullName>
    <label>Remainder Letter Sent Date</label>
    <type>Date</type>
</CustomField>