force-app/main/default/objects/Remainder_Person__c/fields/Remainder_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This can either be a Person Account or an Organization Account</inlineHelpText>
    <label>Remainder Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Remainder Persons (Account Lookup)</relationshipLabel>
    <relationshipName>Remainderpersons</relationshipName>
    <type>Lookup</type>
</CustomField>