force-app/main/default/objects/Remainder_Person__c/fields/Remainder_Person_Address__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Person_Address__c</fullName>
    <formula>Remainder_Person_Contact__r.MailingStreet&amp;BR()
&amp;Remainder_Person_Contact__r.MailingCity&amp;&quot;, &quot;&amp;Remainder_Person_Contact__r.MailingState&amp;&quot; &quot;&amp;Remainder_Person_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remainder Person Address</label>
    <type>Text</type>
</CustomField>