force-app/main/default/objects/Remainder_Person__c/fields/Remainder_Person_Contact__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Person_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This should link to the Remainderperson&apos;s Contact record, not the Beneficiary&apos;s Contact record</inlineHelpText>
    <label>Remainder Person Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Remainder Persons</relationshipLabel>
    <relationshipName>Remainderpersons</relationshipName>
    <type>Lookup</type>
</CustomField>