force-app/main/default/objects/Remainder_Person__c/fields/Remainder_Person_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Person_Full_Name__c</fullName>
    <formula>Remainder_Person_Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remainder Person Full Name</label>
    <type>Text</type>
</CustomField>