force-app/main/default/objects/Remainder_Person__c/fields/RP_Share_of_Balance__c.field-meta.xml
<CustomField>
    <fullName>RP_Share_of_Balance__c</fullName>
    <formula>Closing__r.Balance_After_TMHP_Payment__c   *  Percent_of_Remaining_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RP Share of Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>