force-app/main/default/objects/Remainder_Person__c/fields/XBirthdate__c.field-meta.xml
<CustomField>
    <fullName>XBirthdate__c</fullName>
    <label>XBirthdate</label>
    <type>Date</type>
</CustomField>