force-app/main/default/objects/Remainder_Person__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Relationship_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>RP_Share_of_Balance__c</columns>
    <columns>Percent_of_Remaining_Funds__c</columns>
    <columns>Remainder_Person_Contact__c</columns>
    <columns>Remainder_Letter_Sent__c</columns>
    <columns>Remainder_Letter_Sent_Date__c</columns>
    <columns>Release_Received__c</columns>
    <columns>Remainder_Check_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>