force-app/main/default/objects/Remainder_Person__c/listViews/Remainder_Persons_w_o_Contact.listView-meta.xml
<ListView>
    <fullName>Remainder_Persons_w_o_Contact</fullName>
    <columns>NAME</columns>
    <columns>Closing__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Relationship_Type__c</columns>
    <columns>Remainder_Person_Contact__c</columns>
    <columns>RP_Share_of_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remainder_Person_Contact__c</field>
        <operation>equals</operation>
    </filters>
    <label>Remainder Persons w/o Contact</label>
</ListView>